--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -706,7 +706,7 @@ TODO:
 \begin{itemize}
 	\item Tomasz:
 		\begin{itemize}
-			\item Reported a bug with a wrong path to the generated rustdoc when passing
+			\item Reported a bug with an incorrect path to the generated rustdoc when passing
 				a manifest path in the CLI \cite{issue_wrong_path_manifest_path}.
 			\item Changed how the manifest of the baseline was being built and added
 				selecting all features to baseline's manifest \cite{pr_changed_how_manifest_baseline_built},
