--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -710,7 +710,7 @@ TODO:
 				a manifest path in the CLI \cite{issue_wrong_path_manifest_path}.
 			\item Changed how the manifest of the baseline was being built and added
 				selecting all features to baseline's manifest \cite{pr_changed_how_manifest_baseline_built},
-				which resolved an issue found by a user of the tool
+				which resolved an issue reported by a user of the tool
 				\cite{issue_baseline_rustdoc_from_registry_default_features}
 				where the current and baseline's rustdoc was generated with different features,
 				which resulted in false-positives.
