--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -708,7 +708,7 @@ TODO:
 		\begin{itemize}
 			\item Reported a bug with an incorrect path to the generated rustdoc when passing
 				a manifest path in the CLI \cite{issue_wrong_path_manifest_path}.
-			\item Changed how the manifest of the baseline was being built and added
+			\item Changed how the manifest of the baseline is built and added
 				selecting all features to baseline's manifest \cite{pr_changed_how_manifest_baseline_built},
 				which resolved an issue reported by a user of the tool
 				\cite{issue_baseline_rustdoc_from_registry_default_features}
