--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -717,8 +717,8 @@ TODO:
 			\item Reported a bug where the tests failed on the newest version
 				of the compiler \cite{issue_tests_fail_on_nightly}
 				and implemented a fix \cite{pr_tests_fail_on_nightly}.
-			\item Renamed directories with queries and tests, thanks to which the directory
-				structure of the project is now clear and more intuitive
+			\item Renamed directories with queries and tests, thanks to which the
+				structure of the project is now clear, more intuitive
 				\cite{pr_renamed_directories} \cite{pr_renamed_directories_2}
 				and updated \texttt{CONTRIBUTING.md} \cite{pr_renamed_directories_3}.
 			\item Replaced code duplication with a Rust macro and made adding new
