--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -730,7 +730,7 @@ TODO:
 				massively improved the readability and ease of adding new tests and lints,
 				and improved the error messages when the test output didn't match,
 				which speeds up the process of adding new lints \cite{pr_split_each_test}.
-			\item Made a change in the tests that runs the tool on crates that didn't change
+			\item Made a change in the tests that runs the tool on crates that did not change
 				to detect possible false-positives \cite{pr_run_lints_nonchanged_crates}.
 			\item Commited changes suggested by a new version of the Rust formatter \cite{pr_clippy_lint}.
 			\item Found and fixed a bug where the printed baseline version
