--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -738,7 +738,7 @@ TODO:
 			\item Added a new type of integration tests, which locally checks
 				how the tool behaves with given commandline arguments,
 				and implemented a test that checks whether a recent bug
-				(where the lint files weren't present in the binary)
+				(where the lint files were not present in the binary)
 				was fixed \cite{pr_run_cargo_build}.
 			\item Diagnosed a problem where the tests stopped working \cite{issue_tests_fail_unknown},
 				fixed the adapter after a new rustdoc version which
