--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -744,7 +744,7 @@ TODO:
 				fixed the adapter after a new rustdoc version which
 				stopped exporting inlined items of external crates \cite{pr_rustdoc_trait_incompatibility}
 				and created an issue for strengthening back a lint that was
-				affected with those changes \cite{issue_strengthen_back}.
+				affected by those changes \cite{issue_strengthen_back}.
 			\item Reported a problem where the user could be confused by the lack of
 				detailed information in the help messages of the tool \cite{issue_help_messages}.
 			\item Reported a problem where the output of the tool on the \texttt{bevy-audio} crate
