--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,7 +754,7 @@ TODO:
 			\item Added a feature to disable the usage of the vendored \texttt{OpenSSL} \cite{pr_openssl}
 				because there were problems with it amongst users having
 				the Arch Linux desktop distribution \cite{issue_openssl}.
-			\item Changed the way in which the rustdoc of a crate was generated
+			\item Changed the way in which the rustdoc of a crate is generated
 				-- instead of directly running the rustdoc command on a local copy of the crate,
 				it is now ran on a temporary placeholder project,
 				which just has the checked crate as a dependency.
