--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -775,7 +775,7 @@ TODO:
 				the exit code in one of the integration tests \cite{pr_exit_code}.
 			\item Added a lint in the CI for checking the rustdoc of the project \cite{pr_ci_rustdoc}.
 			\item Fixed a broken link which the users saw in the tool's output \cite{pr_broken_link}.
-			\item Feported a false-positive which was related to re-exporting types, values and macros
+			\item Reported a false-positive which was related to re-exporting types, values and macros
 				with the same names \cite{issue_reexporting}.
 			\item Fixed a user-encountered bug where implicit features due to target-specific
 				optional dependencies were not added in the current version \cite{pr_false_positive_target_specific}.
