--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -790,7 +790,7 @@ TODO:
 		\begin{itemize}
 			\item Added a new lint (trustfall query, test crates, tests) to
 				detect field removals from a struct variant in enums \cite{pr_new_lint_field_removals_struct_variant_enum}
-				and added a field in the in the adapter for the lint \cite{pr_added_field_structvariant}.
+				and added a field in the adapter for the lint \cite{pr_added_field_structvariant}.
 			\item Added a new lint (trustfall query, test crates, tests) \cite{pr_add_function_parameters_semver_checks}
 				to detect when function and method parameter count changes
 				and added the retrieval of function parameter names in the adapter \cite{pr_add_function_parameters}.
