--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -796,7 +796,7 @@ TODO:
 				is correctly initialized \cite{pr_add_error_template_instantiation}.
 			\item Added an integration test in the CI for specifying the package name \cite{pr_test_specifying_package_name}.
 			\item Made a new release workflow in the CI that triggers when publishing
-				a new version of the tool and uploads the new binary to GitHub releases,
+				a new version of the tool and uploads the new binaries to GitHub releases,
 				thanks to which the GitHub Actions
 				(both provided by us and written by users for their own purposes) that were using the tool
 				can now just download the binary (instead of compiling it),
