--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -723,7 +723,7 @@ TODO:
 				and updated \texttt{CONTRIBUTING.md} \cite{pr_renamed_directories_3}.
 			\item Replaced code duplication with a Rust macro and made adding new
 				lints easier \cite{pr_one_macro}.
-			\item Improved the tests \cite{pr_split_each_test}, 
+			\item Improved the tests \cite{pr_split_each_test},
 				which speeded up the process of adding new lints.
 				More precisely:
 				\begin{itemize}
@@ -765,7 +765,7 @@ TODO:
 				It solves a bug encountered by a user \cite{issue_apple_bitflags}
 				where running the tool updates the \texttt{Cargo.lock} file,
 				and allows to easily specify the set of crate's features to run the rustdoc command on
-				\cite{pr_placeholder_1} \cite{pr_placeholder_2} \cite{pr_placeholder_3} 
+				\cite{pr_placeholder_1} \cite{pr_placeholder_2} \cite{pr_placeholder_3}
 				\cite{pr_placeholder_4} \cite{pr_placeholder_5} \cite{pr_placeholder_6}.
 				% The change was done by moving and splitting existing functions into smaller ones \cite{pr_placeholder_1},
 				% switching the baseline rustdoc generation to using the new placeholder project \cite{pr_placeholder_2},
@@ -832,44 +832,46 @@ TODO:
 	\item Mieszko:
 		\begin{itemize}
 			\item TODO
+			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/19
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/255
+			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/20
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/382
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/390
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/390
+			% https://github.com/obi1kenobi/cargo-semver-checks-action/issues/24
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/389
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/276
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/407
+			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/21
+			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/25
 		\end{itemize}
 
 	\item Bartosz:
 		\begin{itemize}
 			\item TODO
-		\end{itemize}
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/217
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/279
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/280
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/281
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/278
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/292
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/283
+			% https://github.com/obi1kenobi/cargo-semver-checks/issues/294
+			% https://github.com/obi1kenobi/cargo-semver-checks/pull/282
+
+\end{itemize}
 
 	\item Mieszko and Bartosz:
 		\begin{itemize}
-			\item TODO
+			\item Added a new lint (trustfall query, test crates, tests) to detect when an exhaustive
+				public enum has the \texttt{non_exhuastive} attribute added \cite{pr_lint_enum_non_exhaustive}.
+
+			\item Designed and implemented new adapter schema for handling attributes \cite{pr_adapter_new_schema_for_attributes}.
+				Updated all lints that check attributes to use the new schema, as well as added multiple
+				new test cases to the queries \cite{pr_new_schema_for_attributes}.
 		\end{itemize}
 \end{itemize}
 
-% All of Mieszko's and Bartosz's PRs and Issues (open and closed)
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/155
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/158
-% https://github.com/obi1kenobi/trustfall-rustdoc-adapter/pull/5
-% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/19
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/255
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/171
-% https://github.com/obi1kenobi/cargo-semver-checks/issues/217
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/279
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/280
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/281
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/278
-% https://github.com/obi1kenobi/cargo-semver-checks/issues/292
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/283
-% https://github.com/obi1kenobi/cargo-semver-checks/issues/294
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/282
-% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/20
-% https://github.com/obi1kenobi/cargo-semver-checks/issues/382
-% https://github.com/obi1kenobi/cargo-semver-checks/issues/390
-% https://github.com/obi1kenobi/cargo-semver-checks-action/issues/24
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/389
-% https://github.com/obi1kenobi/cargo-semver-checks/issues/276
-% https://github.com/obi1kenobi/cargo-semver-checks/pull/407
-% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/21
-% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/25
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %            Bibliography             %
@@ -939,6 +941,9 @@ TODO:
 \bibitem{issue_color_always} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/326
 \bibitem{pr_color_always} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/360
 \bibitem{pr_library} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/314
+\bibitem{pr_lint_enum_non_exhaustive} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/155
+\bibitem{pr_new_schema_for_attributes} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/171
+\bibitem{pr_adapter_new_schema_for_attributes} TODO \\ https://github.com/obi1kenobi/trustfall-rustdoc-adapter/pull/5
 
 \bibitem{Rust-1} Rust Team,
 	\textit{Rust Programming Language} (2023) \\
