--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -864,7 +864,7 @@ TODO:
 	\item Mieszko and Bartosz:
 		\begin{itemize}
 			\item Added a new lint (trustfall query, test crates, tests) to detect when an exhaustive
-				public enum has the \texttt{non_exhuastive} attribute added \cite{pr_lint_enum_non_exhaustive}.
+				public enum has the \texttt{non\_exhuastive} attribute added \cite{pr_lint_enum_non_exhaustive}.
 
 			\item Designed and implemented new adapter schema for handling attributes \cite{pr_adapter_new_schema_for_attributes}.
 				Updated all lints that check attributes to use the new schema, as well as added multiple
