--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -848,7 +848,25 @@ TODO:
 
 	\item Bartosz:
 		\begin{itemize}
-			\item TODO
+			\item Scribe!
+			This scribe was like no other,
+			His notes could make a person shudder,
+			Each word he wrote, a work of art,
+			A skill that set him far apart.
+
+			Meetings became a grand event,
+			When his pen and paper were present,
+			Colleagues vied for his attention,
+			To ensure their words got a mention.
+
+			For this scribe's notes were legendary,
+			Capturing every detail, quite extraordinary,
+			No meeting was complete without his touch,
+			A true master of the notetaking clutch.
+
+
+
+
 			% https://github.com/obi1kenobi/cargo-semver-checks/issues/217
 			% https://github.com/obi1kenobi/cargo-semver-checks/pull/279
 			% https://github.com/obi1kenobi/cargo-semver-checks/pull/280
@@ -944,6 +962,26 @@ TODO:
 \bibitem{pr_lint_enum_non_exhaustive} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/155
 \bibitem{pr_new_schema_for_attributes} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/171
 \bibitem{pr_adapter_new_schema_for_attributes} TODO \\ https://github.com/obi1kenobi/trustfall-rustdoc-adapter/pull/5
+
+\bibitem{pr_action_first_tests} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/19
+\bibitem{pr_choosing_baseline} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/255
+\bibitem{pr_action_inputs_readme} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/20
+\bibitem{issue_finding_registry_baseline} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/382
+\bibitem{issue_fail_on_windows} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/276
+\bibitem{pr_fail_on_windows} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/389
+\bibitem{pr_ci_windows_comment} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/407
+\bibitem{pr_action_v2} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/21
+\bibitem{pr_action_inputs_issues} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/25
+
+\bibitem{issue_repr_attribute_trailing_characters} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/217
+\bibitem{pr_lint_struct_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/279
+\bibitem{pr_lint_trait_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/280
+\bibitem{pr_lint_function_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/281
+\bibitem{pr_lint_enum_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/278
+\bibitem{issue_add_union_to_schema} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/292
+\bibitem{pr_inherent_method_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/283
+\bibitem{issue_non_sealed_pub_trait_method_default_implementation_removed} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/294
+\bibitem{pr_method_moved_to_trait_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/282
 
 \bibitem{Rust-1} Rust Team,
 	\textit{Rust Programming Language} (2023) \\
