--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -848,21 +848,21 @@ TODO:
 
 	\item Bartosz:
 		\begin{itemize}
-			\item Scribe!
-			This scribe was like no other,
-			His notes could make a person shudder,
-			Each word he wrote, a work of art,
-			A skill that set him far apart.
+			\item \emph{SCRIBE!} \\
+			This scribe was like no other, \\
+			His notes could make a person shudder, \\
+			Each word he wrote, a work of art, \\
+			A skill that set him far apart. \\
 
-			Meetings became a grand event,
-			When his pen and paper were present,
-			Colleagues vied for his attention,
-			To ensure their words got a mention.
+			Meetings became a grand event, \\
+			When his pen and paper were present, \\
+			Colleagues vied for his attention, \\
+			To ensure their words got a mention. \\
 
-			For this scribe's notes were legendary,
-			Capturing every detail, quite extraordinary,
-			No meeting was complete without his touch,
-			A true master of the notetaking clutch.
+			For this scribe's notes were legendary, \\
+			Capturing every detail, quite extraordinary, \\
+			No meeting was complete without his touch, \\
+			A true master of the notetaking clutch. \\
 
 
 
