--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -831,19 +831,27 @@ TODO:
 
 	\item Mieszko:
 		\begin{itemize}
-			\item TODO
-			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/19
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/255
-			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/20
-			% https://github.com/obi1kenobi/cargo-semver-checks/issues/382
-			% https://github.com/obi1kenobi/cargo-semver-checks/issues/390
+			\item Reported an incorrect behavior of the CLI, which was choosing the latest release from the registry as a baseline version even if it had been yanked \cite{issue_choosing_baseline}. Introduced a fix and created a set of unit tests for choosing baseline \cite{pr_choosing_baseline}.
+
+			\item Reported a problem in release \texttt{v0.18.2}, where CLI was not looking for the baseline in the registry as it was supposed to \cite{issue_finding_registry_baseline}.
+			
+			\item Reported a bug where the precompiled tool failed on Windows machines \cite{issue_fail_on_windows}. Added a CI job exposing the issue \cite{pr_fail_on_windows}, \cite{pr_ci_windows_comment}.
+
+			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2}, \cite{pr_action_inputs_issues}, which consisted of
+			\begin{itemize}
+				\item creating a test repository \cite{repo_action_tests} and using it to add CI workflow testing the basic functionalities of the action \cite{pr_action_first_tests}, then further developing the CI tests to cover all options added in the new version;
+				\item making use of \texttt{cargo-semver-checks} built-in baseline choosing logic, which fixed the user-reported issue \cite{issue_action_builtin_logic};
+				\item adding support for running the action on Windows- and MacOs-based runners;
+				\item introducing input \texttt{manifest-path}, as requested by user \cite{issue_action_manifest_path};
+				\item introducing input \texttt{verbose}, as requested by user \cite{issue_action_verbose};
+				\item using pre-build binaries to speed up the action, as requested by user \cite{issue_action_binaries};
+				\item \textbf{TODO}: \textit{baseline caching, when I will finish it...};
+				\item rewriting the documentation of the action.
+			\end{itemize}
+		
+			% These two are not even worth mentioning...
 			% https://github.com/obi1kenobi/cargo-semver-checks/issues/390
 			% https://github.com/obi1kenobi/cargo-semver-checks-action/issues/24
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/389
-			% https://github.com/obi1kenobi/cargo-semver-checks/issues/276
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/407
-			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/21
-			% https://github.com/obi1kenobi/cargo-semver-checks-action/pull/25
 		\end{itemize}
 
 	\item Bartosz:
@@ -964,6 +972,7 @@ TODO:
 \bibitem{pr_adapter_new_schema_for_attributes} TODO \\ https://github.com/obi1kenobi/trustfall-rustdoc-adapter/pull/5
 
 \bibitem{pr_action_first_tests} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/19
+\bibitem{issue_choosing_baseline} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/254
 \bibitem{pr_choosing_baseline} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/255
 \bibitem{pr_action_inputs_readme} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/20
 \bibitem{issue_finding_registry_baseline} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/382
@@ -972,6 +981,15 @@ TODO:
 \bibitem{pr_ci_windows_comment} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/407
 \bibitem{pr_action_v2} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/21
 \bibitem{pr_action_inputs_issues} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/pull/25
+\bibitem{repo_action_tests} TODO \\
+https://github.com/mgr0dzicki/cargo-semver-action-ref-slice
+\bibitem{issue_action_builtin_logic} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks-action/issues/23
+\bibitem{issue_action_manifest_path} TODO \\
+https://github.com/obi1kenobi/cargo-semver-checks-action/issues/18
+\bibitem{issue_action_verbose} TODO \\
+https://github.com/obi1kenobi/cargo-semver-checks-action/issues/16
+\bibitem{issue_action_binaries} TODO \\
+https://github.com/obi1kenobi/cargo-semver-checks-action/issues/8
 
 \bibitem{issue_repr_attribute_trailing_characters} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/issues/217
 \bibitem{pr_lint_struct_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/279
