Described the contribution PRs

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -864,18 +864,34 @@ TODO:
 			No meeting was complete without his touch, \\
 			A true master of the notetaking clutch. \\
 
+			\item Added a new lint (trustfall query, test crates, tests) to
+				detect when an enum has been marked with the \texttt{must\_use}
+				attribute \cite{pr_lint_enum_must_use_added}.
 
+			\item Added a new lint (trustfall query, test crates, tests) to
+				detect when a struct has been marked with the \texttt{must\_use}
+				attribute \cite{pr_lint_struct_must_use_added}.
 
+			\item Added a new lint (trustfall query, test crates, tests) to
+				detect when a trait has been marked with the \texttt{must\_use}
+				attribute \cite{pr_lint_trait_must_use_added}.
 
+			\item Added a new lint (trustfall query, test crates, tests) to
+				detect when a function has been marked with the \texttt{must\_use}
+				attribute \cite{pr_lint_function_must_use_added}.
+
+			\item Added a new lint (trustfall query, test crates, tests) to
+				detect when a method is moved to a public trait and marked with the
+				\texttt{must\_use} attribute at the same time \cite{pr_method_moved_to_trait_must_use_added}.
+
+			\item Added a new lint (trustfall query, test crates, tests) to
+				detect when an inherent method has been marked with the \texttt{must\_use}
+				attribute \cite{pr_inherent_method_must_use_added}.
+
+			% Not closed yet:
 			% https://github.com/obi1kenobi/cargo-semver-checks/issues/217
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/279
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/280
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/281
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/278
 			% https://github.com/obi1kenobi/cargo-semver-checks/issues/292
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/283
 			% https://github.com/obi1kenobi/cargo-semver-checks/issues/294
-			% https://github.com/obi1kenobi/cargo-semver-checks/pull/282
 
 \end{itemize}
 
