--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -698,7 +698,7 @@ The project's functionalities and goals can be split into independent improvemen
 hence our contributions were mostly composed of multiple, smaller changes.
 The usual workflow of writing code was as follows:
 \begin{enumerate}
-	\item discussing with our mentor (that is also the project maintainer) about
+	\item discussing with our mentor (who is also the project maintainer) about
 		what improvements have the highest priority,
 	\item individually picking a few tasks based on our preferences,
 	\item implementing the tasks
