--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -701,7 +701,7 @@ The usual workflow of writing code was as follows:
 	\item discussing with our mentor (who is also the project maintainer) about
 		what improvements have the highest priority,
 	\item individually picking a few tasks based on our preferences,
-	\item implementing the tasks
+	\item implementing those tasks
 		(and sometimes also thinking about the design of the change)
 		and creating Pull Requests
 		on the project's GitHub repositories,
