--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -707,7 +707,7 @@ The usual workflow of writing code was as follows:
 		on the project's GitHub repositories,
 	\item going through an extensive review process with our mentor
 		(as there are often other contributors in the project besides us,
-		the code's readability is a strong focus in the project),
+		the code's readability is a strong focus point in the project),
 	\item getting the Pull Request merged by our mentor
 		and releasing (usually a few days later) a new version of the binary to the registry.
 \end{enumerate}
