--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -719,7 +719,7 @@ There were some exceptions to this workflow:
 	\item to speedup the process of merging the Pull Requests,
 		sometimes we first reviewed each others' code,
 	\item when a user reported a bug, we often looked into the problem
-		and searched for a temporary fix or the bug as soon as possible,
+		and searched for a temporary fix of the bug as soon as possible,
 	\item when we encountered bugs or thought of possible additional improvements
 		in the tool's functionality,
 		we created an appropriate Issue on the GitHub repository.
