Commented out the scribe poem part (sadge)

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -834,7 +834,7 @@ TODO:
 			\item Reported an incorrect behavior of the CLI, which was choosing the latest release from the registry as a baseline version even if it had been yanked \cite{issue_choosing_baseline}. Introduced a fix and created a set of unit tests for choosing baseline \cite{pr_choosing_baseline}.
 
 			\item Reported a problem in release \texttt{v0.18.2}, where CLI was not looking for the baseline in the registry as it was supposed to \cite{issue_finding_registry_baseline}.
-			
+
 			\item Reported a bug where the precompiled tool failed on Windows machines \cite{issue_fail_on_windows}. Added a CI job exposing the issue \cite{pr_fail_on_windows}, \cite{pr_ci_windows_comment}.
 
 			\item Developed a new version of \texttt{cargo-semver-checks-action} \cite{pr_action_v2}, \cite{pr_action_inputs_issues}, which consisted of
@@ -848,7 +848,7 @@ TODO:
 				\item \textbf{TODO}: \textit{baseline caching, when I will finish it...};
 				\item rewriting the documentation of the action.
 			\end{itemize}
-		
+
 			% These two are not even worth mentioning...
 			% https://github.com/obi1kenobi/cargo-semver-checks/issues/390
 			% https://github.com/obi1kenobi/cargo-semver-checks-action/issues/24
@@ -856,21 +856,21 @@ TODO:
 
 	\item Bartosz:
 		\begin{itemize}
-			\item \emph{SCRIBE!} \\
-			This scribe was like no other, \\
-			His notes could make a person shudder, \\
-			Each word he wrote, a work of art, \\
-			A skill that set him far apart. \\
+			% \item \emph{SCRIBE!} \\
+			% This scribe was like no other, \\
+			% His notes could make a person shudder, \\
+			% Each word he wrote, a work of art, \\
+			% A skill that set him far apart. \\
 
-			Meetings became a grand event, \\
-			When his pen and paper were present, \\
-			Colleagues vied for his attention, \\
-			To ensure their words got a mention. \\
+			% Meetings became a grand event, \\
+			% When his pen and paper were present, \\
+			% Colleagues vied for his attention, \\
+			% To ensure their words got a mention. \\
 
-			For this scribe's notes were legendary, \\
-			Capturing every detail, quite extraordinary, \\
-			No meeting was complete without his touch, \\
-			A true master of the notetaking clutch. \\
+			% For this scribe's notes were legendary, \\
+			% Capturing every detail, quite extraordinary, \\
+			% No meeting was complete without his touch, \\
+			% A true master of the notetaking clutch. \\
 
 			\item Added several new lints (trustfall queries, test crates, tests)
 				to detect when different items have been marked with the \texttt{must\_use}
